@@ -1,3 +1,9 @@
+2011-01-25  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tkSelect.c: [Patch #3129527]: Fix buffer overflow w/ GCC 4.5 and
+	* win/tkWinWm.c       -D_FORTIFY_SOURCE=2. Just the strcpy->memcpy part,
+	* unix/tkUnixWm.c     to prevent anything like [Bug #3164879]
+
 2011-01-22  Joe English  <jenglish@users.sourceforge.net>
 
 	* generic/ttk/ttkEntry.c(ttk::combobox): Add missing 
